more updates I don't remember

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="container-fluid text-sm-center p-5 mb-3 bg-dark">
-      <h1 class="display-1 text-light">COVID19</h1>
+      <h1 class="display-1 align-text-center text-light">COVID19</h1>
       <p class="lead text-light">Global Information on Coronavirus</p>
     </div>
     <div class="container">
