--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
         </div>
       </div>
     </div>
+    <footer class="footer mt-auto py-3 bg-dark">
+      <div class="container">
+        <span class="text-muted ">Created by Matthew Tanner {kodebytes}</span>
+      </div>
+    </footer>
     <script src="./static/js/index.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
